human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_99.wast
(assert_invalid
  (module (func $type-block-value-nested-return-num-vs-void
    (block (i32.const 3) (block (return)))
  ))
  "type mismatch"
)